<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_picture"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/loginInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_text"
        android:text="@string/login_tv"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_info"
        android:textSize="15sp"
        android:layout_marginStart="@dimen/layout_margin_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginInfo" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="@dimen/standard_activity_width"
        android:layout_height="@dimen/standard_height"
        android:layout_marginTop="300dp"
        android:background="@drawable/bg_input"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="@dimen/standard_activity_width"
        android:layout_height="@dimen/standard_height"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_input"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailET" />

    <Button
        android:id="@+id/loginButton"
        style="@style/StandardButton"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:layout_marginTop="32dp"
        android:onClick="onLogin"
        android:text="@string/login_button_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordET" />

    <TextView
        android:id="@+id/inputEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/text_email"
        android:textSize="@dimen/font_login_signup"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailET"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/text_password"
        android:textSize="@dimen/font_login_signup"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/passwordET"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>